// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination renders correctly with advanced setup of prevButton, pageButton and nextButton using Tailwind 1`] = `
<DocumentFragment>
  <div
    class="flex items-center w-full h-10 text-sm select-none"
  >
    <button
      class="flex items-center mr-2 text-gray-500 cursor-pointer hover:text-gray-600 dark:hover:text-gray-200 focus:outline-none"
    >
      <svg
        class="mr-3"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="19"
          x2="5"
          y1="12"
          y2="12"
        />
        <polyline
          points="12 19 5 12 12 5"
        />
      </svg>
      Previous
    </button>
    <nav
      class="flex justify-center flex-grow"
    >
      <ul
        class="flex items-center"
      >
        <li>
          <a
            class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
            tabindex="0"
          >
            1
          </a>
        </li>
        <li
          class="w-10 px-0.5 text-center"
        >
          ...
        </li>
        <li>
          <a
            class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
            tabindex="0"
          >
            4
          </a>
        </li>
        <li>
          <a
            class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
            tabindex="0"
          >
            5
          </a>
        </li>
        <li>
          <a
            class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer bg-primary-50 dark:bg-opacity-0 text-primary-600 dark:text-white"
            tabindex="0"
          >
            6
          </a>
        </li>
        <li>
          <a
            class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
            tabindex="0"
          >
            7
          </a>
        </li>
        <li>
          <a
            class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
            tabindex="0"
          >
            8
          </a>
        </li>
        <li
          class="w-10 px-0.5 text-center"
        >
          ...
        </li>
        <li>
          <a
            class="flex items-center justify-center h-10 w-10 rounded-full cursor-pointer text-gray-500"
            tabindex="0"
          >
            10
          </a>
        </li>
      </ul>
    </nav>
    <button
      class="flex items-center mr-2 text-gray-500 opacity-50 hover:text-gray-600 dark:hover:text-gray-200 focus:outline-none"
    >
      Next
      <svg
        class="ml-3"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="5"
          x2="19"
          y1="12"
          y2="12"
        />
        <polyline
          points="12 5 19 12 12 19"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination renders correctly with basic setup of prevButton, pageButton and nextButton 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      data-testid="prev"
    >
      Previous
    </button>
    <nav
      class="flex justify-center flex-grow"
    >
      <ul
        class="flex items-center"
      >
        <li>
          <a
            class=""
            data-testid="inactive-page-button-1"
            tabindex="0"
          >
            1
          </a>
        </li>
        <li>
          ...
        </li>
        <li>
          <a
            class=""
            data-testid="inactive-page-button-4"
            tabindex="0"
          >
            4
          </a>
        </li>
        <li>
          <a
            class=""
            data-testid="inactive-page-button-5"
            tabindex="0"
          >
            5
          </a>
        </li>
        <li>
          <a
            class=""
            data-testid="active-page-button"
            tabindex="0"
          >
            6
          </a>
        </li>
        <li>
          <a
            class=""
            data-testid="inactive-page-button-7"
            tabindex="0"
          >
            7
          </a>
        </li>
        <li>
          <a
            class=""
            data-testid="inactive-page-button-8"
            tabindex="0"
          >
            8
          </a>
        </li>
        <li>
          ...
        </li>
        <li>
          <a
            class=""
            data-testid="inactive-page-button-10"
            tabindex="0"
          >
            10
          </a>
        </li>
      </ul>
    </nav>
    <button
      data-testid="next"
    >
      Next
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination renders correctly with custom page button 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button>
      Previous
    </button>
    <div
      class="flex items-center justify-center flex-grow"
    >
      <li>
        <span
          class=""
          data-testid="undefined-1"
          tabindex="0"
        >
          1
        </span>
      </li>
      <li>
        ...
      </li>
      <li>
        <span
          class=""
          data-testid="undefined-4"
          tabindex="0"
        >
          4
        </span>
      </li>
      <li>
        <span
          class=""
          data-testid="undefined-5"
          tabindex="0"
        >
          5
        </span>
      </li>
      <li>
        <span
          class=""
          data-testid="page-button-custom"
          tabindex="0"
        >
          6
        </span>
      </li>
      <li>
        <span
          class=""
          data-testid="undefined-7"
          tabindex="0"
        >
          7
        </span>
      </li>
      <li>
        <span
          class=""
          data-testid="undefined-8"
          tabindex="0"
        >
          8
        </span>
      </li>
      <li>
        ...
      </li>
      <li>
        <span
          class=""
          data-testid="undefined-10"
          tabindex="0"
        >
          10
        </span>
      </li>
    </div>
    <button>
      Next
    </button>
  </div>
</DocumentFragment>
`;

exports[`Pagination renders correctly with different truncable text 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <button
      data-testid="prev"
    >
      Previous
    </button>
    <nav
      class="flex justify-center flex-grow"
    >
      <ul
        class="flex items-center"
      >
        <li>
          <a
            class=""
            data-testid="inactive-page-button-1"
            tabindex="0"
          >
            1
          </a>
        </li>
        <li>
          ---
        </li>
        <li>
          <a
            class=""
            data-testid="inactive-page-button-4"
            tabindex="0"
          >
            4
          </a>
        </li>
        <li>
          <a
            class=""
            data-testid="inactive-page-button-5"
            tabindex="0"
          >
            5
          </a>
        </li>
        <li>
          <a
            class=""
            data-testid="active-page-button"
            tabindex="0"
          >
            6
          </a>
        </li>
        <li>
          <a
            class=""
            data-testid="inactive-page-button-7"
            tabindex="0"
          >
            7
          </a>
        </li>
        <li>
          <a
            class=""
            data-testid="inactive-page-button-8"
            tabindex="0"
          >
            8
          </a>
        </li>
        <li>
          ---
        </li>
        <li>
          <a
            class=""
            data-testid="inactive-page-button-10"
            tabindex="0"
          >
            10
          </a>
        </li>
      </ul>
    </nav>
    <button
      data-testid="next"
    >
      Next
    </button>
  </div>
</DocumentFragment>
`;
